# Data-TSAR

./: .gitignore  README.md  pyproject.toml  setup.py
TSAR/: HAWC2IO.py  TimeSeriesAggregator.py  __init__.py  cli.py
examples/: example_01_evaluate_fictitious_data.py
